# randoalgos

./: LICENSE
adder/src/: lib.rs
maths/: Cargo.toml
maths/benches/: maths_benchmark.rs
maths/fuzz/: Cargo.toml
maths/fuzz/fuzz_targets/: mean.rs  median.rs  mode.rs
maths/src/: lib.rs
torque/: Cargo.toml
torque/src/: lib.rs
