[package]
name = "maths-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.maths]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "mean"
path = "fuzz_targets/mean.rs"
test = false
doc = false

[[bin]]
name = "median"
path = "fuzz_targets/median.rs"
test = false
doc = false

[[bin]]
name = "mode"
path = "fuzz_targets/mode.rs"
test = false
doc = false
